--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -276,9 +276,10 @@ font-size: 18px;
 }
 
 .create-form{
-    padding-top: 200px;
-    background-color: #ebebeb;
+    padding-top: 250px;
     padding-bottom: 50px;
+    background-color: #ebebeb;
+    padding-bottom: 100px;
     padding-left: 35%;
 }
 .control-boton{
