--- a/views/home.html
+++ b/views/home.html
@@ -31,10 +31,10 @@
       <li><a href='#'>Ayuda </a></li>
     </ul>
     <ul class="rigth-navbar">
-      <li><a href='#'>Creá tu cuenta </a>
+      <li><a href='/register'>Creá tu cuenta </a>
         <i class="far fa-address-card"></i>
       </li>
-      <li><a href='#'>Ingresá </a>
+      <li><a href='/login'>Ingresá </a>
         <i class="fas fa-sign-in-alt"></i>
       </li>
       <li><a href='#'>Mis compras </a>
