modifico check box de intereses

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -317,6 +317,8 @@ transition: background-color .5s;
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    flex-direction: row;
+    align-items: center;
 }
 .items-checkbox{
     margin: 15px;
