--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -202,7 +202,13 @@ text-align: center;
 flex-direction: column;
 font-size: 12px;
 color: rgb(100, 100, 100);
+font-weight: 0;
+transition: font-weight font-size 0.5s;
 }
+.product__title:hover{
+    font-weight: bold;
+    font-size: 14px;
+    }
 .product__price{
 text-align: center;
 color: black;
@@ -230,15 +236,43 @@ font-size: 18px;
 .options1{
     text-align: center;
     margin: 0%;
+    transition: box-shadow 0.5s;
+}
+
+.options1:hover{
+box-shadow:
+1px 1px #a39f9f,
+2px 2px #a39f9f,
+3px 3px #a39f9f;
+-webkit-transform: translateX(-3px);
+transform: translateX(-3px);
 }
 .options2{
     text-align: center;
     margin: 0%;
+    transition: box-shadow 0.5s;
 }
+.options2:hover{
+    box-shadow:
+    1px 1px #a39f9f,
+    2px 2px #a39f9f,
+    3px 3px #a39f9f;
+    -webkit-transform: translateX(-3px);
+    transform: translateX(-3px);
+    }
 .options3{
     text-align: center;
     margin: 0%;
+    transition: box-shadow 0.5s;
 }
+.options3:hover{
+    box-shadow:
+    1px 1px #a39f9f,
+    2px 2px #a39f9f,
+    3px 3px #a39f9f;
+    -webkit-transform: translateX(-3px);
+    transform: translateX(-3px);
+    }
 .container-footer{
     display: flex;
     margin: auto;
@@ -268,6 +302,7 @@ font-size: 18px;
     font-size: 12px;
     padding-left: 10px;
 }
+
 
 /*LOGIN*/
 .control {
